--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "main": "dist/index.js",
   "name": "prisma-client-lib",
   "peerDependencies": {
-    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0"
+    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0"
   },
   "prettier": {
     "semi": false,
